--- a/.travis.yml
+++ b/.travis.yml
@@ -34,14 +34,14 @@ script:
   - cd release
   - $CMAKE_CMD .. -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DFL_BACKTRACE=ON -DFL_USE_FLOAT=$FL_USE_FLOAT -DFL_CPP11=$FL_CPP11 -DFL_BUILD_TESTS=ON
   - make
-  - ./release/bin/fuzzylite-tests
+  - ./bin/fuzzylite-tests
   - cd ..
   #debug
   - mkdir -p debug
   - cd debug
   - $CMAKE_CMD .. -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=Debug -DFL_BACKTRACE=ON -DFL_USE_FLOAT=$FL_USE_FLOAT -DFL_CPP11=$FL_CPP11 -DFL_BUILD_TESTS=ON
   - make
-  - ./debug/bin/fuzzylite-tests-debug
+  - ./bin/fuzzylite-tests-debug
 
 matrix:
   exclude:
