--- a/fuzzylite/fuzzylite.pc.in
+++ b/fuzzylite/fuzzylite.pc.in
@@ -1,10 +1,10 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
 includedir=${exec_prefix}/include
-libdir=@CMAKE_INSTALL_LIBDIR@
+libdir=${exec_prefix}/lib
 
 Name: fuzzylite
 Description: A fuzzy logic control library in C++
 Version: @FL_VERSION@
 Libs: -L${libdir} -lfuzzylite
-Cflags: -I${includedir}/fl
+Cflags: -I${includedir}
