--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -178,8 +178,7 @@ if(FL_BUILD_BINARY)
     set_target_properties(fl-bin PROPERTIES OUTPUT_NAME fuzzylite IMPORT_PREFIX tmp-) #To prevent LNK1149 in Windows
     set_target_properties(fl-bin PROPERTIES DEBUG_POSTFIX -debug)
 
-#    set_target_properties(fl-bin PROPERTIES COMPILE_DEFINITIONS "FL_IMPORT_LIBRARY")
-    target_compile_definitions(fl-bin PUBLIC FL_IMPORT_LIBRARY)
+    set_target_properties(fl-bin PROPERTIES COMPILE_DEFINITIONS "FL_IMPORT_LIBRARY")
     target_link_libraries(fl-bin fl-shared ${FL_LIBS})
 endif(FL_BUILD_BINARY)
 
@@ -193,13 +192,13 @@ if(FL_BUILD_TESTS)
     if (NOT FL_CPP11)
         set(fl-test-definitions "${fl-test-definitions} CATCH_CONFIG_NO_CPP11")
     endif()
-    target_compile_definitions(fl-test PUBLIC ${fl-test-definitions})
+    set_target_properties(fl-bin PROPERTIES COMPILE_DEFINITIONS "${fl-test-definitions}")
 
     #Ignore warnings of parentheses in CHECK(a == b) for Catch under g++-4.7
     if ("${CMAKE_CXX_COMPILER_ID}"  STREQUAL "GNU") 
-    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8)
-        set_target_properties(fl-test PROPERTIES COMPILE_FLAGS "-Wno-parentheses")
-    endif()
+        if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8)
+            set_target_properties(fl-test PROPERTIES COMPILE_FLAGS "-Wno-parentheses")
+        endif()
     endif()
 
     target_link_libraries(fl-test fl-shared ${FL_LIBS})
